# desktop-voice-contexual-partner

./: .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  PLAN.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  Widget.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: capture.rs  mod.rs  stt.rs
src-tauri/src/commands/: chat.rs  context.rs  history.rs  memory.rs  mod.rs  rag.rs  settings.rs  setup.rs  system.rs  voice.rs
src-tauri/src/context/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/embed/: mod.rs
src-tauri/src/llm/: client.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/rag/: mod.rs
src-tauri/src/safety/: mod.rs
src-tauri/src/summarize/: mod.rs
src-tauri/src/tts/: kokoro.rs  mod.rs  piper.rs
src/components/: AboutDialog.tsx  ContextPermissionDialog.tsx  DocumentPanel.tsx  HistoryPanel.tsx  MemoryPanel.tsx  ModelSetupPanel.tsx  Onboarding.tsx  SafetyPanel.tsx  SettingsPanel.tsx  StatusBar.tsx  Transcript.tsx  VoiceButton.tsx  VoiceGallery.tsx  VoiceVisualizer.tsx
src/lib/: tauri.ts
src/store/: chatStore.ts  ollamaStore.ts  settingsStore.ts
